@@ -2,7 +2,7 @@ dnl Process this file with autoconf to produce a configure script.
 AC_INIT(SecureServ.c)
 AC_CONFIG_HEADER(modconfig.h)
 PACKAGE=SecureServ
-VERSION=0.9.4
+VERSION=0.9.5
 DIRINST=~/NeoStats/
 AC_PREFIX_DEFAULT(~/NeoStats/)
 CFLAGS="$CFLAGS -O2 -Wall"
@@ -10,11 +10,6 @@ CFLAGS="$CFLAGS -O2 -Wall"
 dnl Checks for programs.
 AC_PROG_CC
 AC_PROG_INSTALL 
-
-PCRE_MAJOR=4
-PCRE_MINOR=3
-PCRE_DATE=21-May-2003
-PCRE_VERSION=${PCRE_MAJOR}.${PCRE_MINOR}
 
 dnl Default values for miscellaneous macros
 
@@ -60,7 +55,7 @@ AC_TRY_RUN(
 int main(void) {
 	if (MAJOR >= 2) {
 		if (MINOR >= 5) {
-			if (REV >= 5) {
+			if (REV >= 9) {
 				exit(0);
 			}
 		}
@@ -73,7 +68,7 @@ int main(void) {
 if test "$ns_version_ok" = "yes"; then
 	AC_MSG_RESULT(Compatible Version);
 else
-	AC_MSG_ERROR(This Module requires NeoStats 2.5.5 or Higher)
+	AC_MSG_ERROR(This Module requires NeoStats 2.5.9 or Higher)
 fi
 
 dnl check if we are running with Debug....
@@ -93,14 +88,6 @@ AC_ARG_ENABLE(debug,
 AC_MSG_RESULT(no)
 )
 
-AC_CHECK_FILE($DIRINST/include/pcre.h, 
-,
-[BUILDPCRE="libpcre.a"
-CFLAGS="$CFLAGS -Ipcre"
-])
-
-
-
 AC_SUBST(DIRINST)
 AC_SUBST(BUILDPCRE)
 AC_SUBST(CFLAGS)
@@ -112,15 +99,9 @@ AC_SUBST(HAVE_STRERROR)
 AC_SUBST(LINK_SIZE)
 AC_SUBST(MATCH_LIMIT)
 AC_SUBST(NEWLINE)
-AC_SUBST(PCRE_MAJOR)
-AC_SUBST(PCRE_MINOR)
-AC_SUBST(PCRE_DATE)
-AC_SUBST(PCRE_VERSION)
-AC_SUBST(PCRE_LIB_VERSION)
-AC_SUBST(PCRE_POSIXLIB_VERSION)
 AC_SUBST(POSIX_MALLOC_THRESHOLD)
 AC_SUBST(UTF8)
-AC_OUTPUT(Makefile pcre/Makefile pcre/pcre.h:pcre/pcre.in)
+AC_OUTPUT(Makefile)
 echo "(*----------------------------------------------------------*)"
 echo "(| Important Instructions                                   |)"
 echo "(*----------------------------------------------------------*)"
