@@ -25,6 +25,7 @@ SecureServ Module for NeoStats Changelog.
  - Only compile in pcre if its not contained in NeoStats Core (F)
  - if the IRCd we are using doesn't support SVSJOIN, use invite instead (LOL!) (F)
  - Random Version replies for the Onjoin Bots. BugID: 71 (F)
+ - removed local libpcre stuff - this must now be present in core (M)
  
 0.9.4 - Fish - 20 Aug, 2003
  - configure now checks for crypt.h (BugID: 37)
